fix for nav item spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2005,12 +2005,16 @@ body.sticky-header .c-page--top {
     background-size: 100% 3px;
   }
 
-  .c-nav__link::after,
-.c-nav__link.active:after {
+  .dropdown .c-nav__link span,
+.dropdown .c-nav__link.active span {
+    margin-right: 0.625rem;
+  }
+  .dropdown .c-nav__link::after,
+.dropdown .c-nav__link.active::after {
     transform: rotate(90deg);
-    margin: 0 0 0 9px;
+    margin: 0 0 0 0;
     transition: hover 0.3s;
-    width: 6px;
+    width: 10px;
     height: 11px;
     display: inline-block;
     line-height: 1em;
@@ -2063,10 +2067,8 @@ body.sticky-header .c-page--top {
   .c-nav__item {
     justify-content: center;
   }
-
-  .c-nav__item {
-    padding: 0;
-    margin: 0 1em;
+  .c-nav__item.dropdown {
+    padding-right: 0;
   }
 
   .c-nav__item:hover .firstlevel {
@@ -2248,6 +2250,12 @@ body.sticky-header .c-page--top {
 
   .dropdown-menu {
     display: none;
+  }
+}
+@media (min-width: 1000px) and (max-width: 1100px) {
+  .dropdown .c-nav__link span,
+.dropdown .c-nav__link.active span {
+    margin-right: 0.375rem;
   }
 }
 @media all and (max-width: 991px) {
