--- a/assets/scss/_c-navigation.scss
+++ b/assets/scss/_c-navigation.scss
@@ -84,26 +84,32 @@
         background-size: 100% 3px;
     }
 
-    .c-nav__link::after,
-    .c-nav__link.active:after {
-        transform: rotate(90deg);
-        margin: 0 0 0 9px;
-        transition: hover .3s;
-        width: 6px;
-        height: 11px;
-        display: inline-block;
-        line-height: 1em;
-        vertical-align: middle;
-        margin-bottom: 3px;
-        content: '';
-        visibility: hidden;
-        background-image: url(#{$cdn-url}media/1yul22mo/arrow-right-white.svg);
-        background-repeat: no-repeat;
-        background-size: contain;
-        position: relative;
-        border: none;
-        top: 0;
-    }
+	.dropdown .c-nav__link,
+    .dropdown .c-nav__link.active {
+		span {
+			margin-right: rem-size(10px);	
+		}
+		
+		&::after {
+			transform: rotate(90deg);
+			margin: 0 0 0 0;
+			transition: hover .3s;
+			width: 10px;
+			height: 11px;
+			display: inline-block;
+			line-height: 1em;
+			vertical-align: middle;
+			margin-bottom: 3px;
+			content: '';
+			visibility: hidden;
+			background-image: url(#{$cdn-url}media/1yul22mo/arrow-right-white.svg);
+			background-repeat: no-repeat;
+			background-size: contain;
+			position: relative;
+			border: none;
+			top: 0;	
+		}
+	}
 
     .dropdown:hover .c-nav__link::after {
         visibility: visible;
@@ -141,11 +147,10 @@
 
     .c-nav__item {
         justify-content: center;
-    }
-
-    .c-nav__item {
-        padding: 0;
-        margin: 0 1em;
+		
+		&.dropdown {
+			padding-right:0;
+		}
     }
 
     .c-nav__item:hover .firstlevel {
@@ -333,6 +338,13 @@
 
     .dropdown-menu {
         display: none;
+    }
+}
+
+@media (min-width: $breakpoint-head) and (max-width: 1100px) {
+	.dropdown .c-nav__link span,
+    .dropdown .c-nav__link.active span {
+        margin-right: rem-size(6px);
     }
 }
 
